--- a/necklace.cabal
+++ b/necklace.cabal
@@ -24,13 +24,14 @@ extra-source-files:
     CHANGELOG.md
 
 executable necklace
-    main-is:          Main.hs
+    main-is:            Main.hs
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
-    hs-source-dirs:   app
-    default-language: Haskell2010
+    build-depends:      base ^>=4.14.3.0
+    build-tool-depends: alex:alex,
+    hs-source-dirs:     app
+    default-language:   Haskell2010
