--- a/necklace.cabal
+++ b/necklace.cabal
@@ -55,6 +55,7 @@ test-suite spec
                  , hspec >= 2.7
                  , hspec-discover >= 2.7
                  , necklace
+  build-tool-depends: alex:alex
   default-language:    Haskell2010
   ghc-options: -Wall
 
