--- a/necklace.cabal
+++ b/necklace.cabal
@@ -31,7 +31,7 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options: -Wall
-executable necklace
+executable necklace_compiler
   main-is:            Main.hs
 
     -- Modules included in this executable, other than Main.
