--- a/necklace.cabal
+++ b/necklace.cabal
@@ -28,7 +28,7 @@ library
                       , text
                       , array
   build-tool-depends: alex:alex
-  exposed-modules:     Compiler.Parser.Lexer
+  exposed-modules:    Compiler.Parser.Lexer, Necklace.AST
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options: -Wall
