--- a/necklace.cabal
+++ b/necklace.cabal
@@ -28,7 +28,8 @@ library
                       , text
                       , array
   build-tool-depends: alex:alex
-  exposed-modules:    Compiler.Parser.Lexer, Necklace.AST
+                      , happy:happy
+  exposed-modules:    Compiler.Lexer, Necklace.AST
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options: -Wall
@@ -44,6 +45,7 @@ executable necklace_compiler
   build-depends:      base ^>=4.14.3.0
                       , text
   build-tool-depends: alex:alex
+                      , happy:happy
   hs-source-dirs:     src
   default-language:   Haskell2010
 
