--- a/necklace.cabal
+++ b/necklace.cabal
@@ -29,7 +29,7 @@ library
                       , array
   build-tool-depends: alex:alex
                       , happy:happy
-  exposed-modules:    Compiler.Lexer, Necklace.AST
+  exposed-modules:    Compiler.Lexer, Necklace.AST, Compiler.Parser
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options: -Wall
