--- a/necklace.cabal
+++ b/necklace.cabal
@@ -30,9 +30,17 @@ library
                       , containers
                       , mtl
                       , lens
+                      , llvm-hs-pure
+                      , llvm-hs-pretty
+                      , bytestring
+                      , utf8-string
   build-tool-depends: alex:alex
                       , happy:happy
-  exposed-modules:    Compiler.Lexer, Necklace.AST, Compiler.Parser, ContextAnalysis.Analyzer
+  exposed-modules:    Compiler.Lexer
+                      , Necklace.AST
+                      , Compiler.Parser
+                      , ContextAnalysis.Analyzer
+                      , Codegen.Codegen
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options: -Wall
