--- a/necklace.cabal
+++ b/necklace.cabal
@@ -43,12 +43,11 @@ library
   default-language:    Haskell2010
   ghc-options: -Wall
 executable necklace_compiler
-  main-is: Main.hs
-  other-modules:      Compiler.Lexer
-                      , Necklace.AST
-                      , Compiler.Parser
-                      , ContextAnalysis.Analyzer
-                      , Codegen.Codegen
+  main-is:            Main.hs
+  other-modules: Codegen.Codegen ContextAnalysis.Analyzer Compiler.Lexer Compiler.Parser Necklace.AST
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -63,7 +62,6 @@ executable necklace_compiler
                       , llvm-hs-pretty
                       , bytestring
                       , utf8-string
-                      , necklace
   build-tool-depends: alex:alex
                       , happy:happy
   hs-source-dirs:     src
