--- a/necklace.cabal
+++ b/necklace.cabal
@@ -40,7 +40,6 @@ library
     , bytestring
     , containers
     , lens
-    , llvm-hs
     , llvm-hs-pretty
     , llvm-hs-pure
     , mtl
@@ -61,7 +60,6 @@ executable necklace-exe
     , bytestring
     , containers
     , lens
-    , llvm-hs
     , llvm-hs-pretty
     , llvm-hs-pure
     , mtl
@@ -86,8 +84,8 @@ test-suite necklace-test
     , base >=4.7 && <5
     , bytestring
     , containers
+    , hspec
     , lens
-    , llvm-hs
     , llvm-hs-pretty
     , llvm-hs-pure
     , mtl
