--- a/necklace.cabal
+++ b/necklace.cabal
@@ -17,7 +17,9 @@ license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     README.md
-    ChangeLog.md
+    CHANGELOG.md
+    src/Compiler/Lexer.x
+    src/Compiler/Parser.y
 
 source-repository head
   type: git
@@ -34,6 +36,9 @@ library
       Paths_necklace
   hs-source-dirs:
       src
+  build-tools:
+      alex
+    , happy
   build-depends:
       array
     , base >=4.7 && <5
@@ -54,6 +59,9 @@ executable necklace-exe
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-tools:
+      alex
+    , happy
   build-depends:
       array
     , base >=4.7 && <5
@@ -79,6 +87,9 @@ test-suite necklace-test
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-tools:
+      alex
+    , happy
   build-depends:
       array
     , base >=4.7 && <5
