--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           command: "apt-get update"
       - run:
           name: "Install dependencies"
-          command: "apt-get install -y ghc cabal-install curl"
+          command: "apt-get install -y ghc cabal-install curl llvm-9 llvm-9-dev"
       - run:
           name: "Install stack"
           command: "curl -sSL https://get.haskellstack.org/ | sh"
